Remove Object and add ResourceReference, ReporterReference, Representation
