# api/kessel/inventory/v1beta2/resource_type.pb.go
@@ -1,165 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.34.2
-// 	protoc        (unknown)
-// source: kessel/inventory/v1beta2/resource_type.proto
-
-package v1beta2
-
-import (
-	_ "buf.build/gen/go/bufbuild/protovalidate/protocolbuffers/go/buf/validate"
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-	sync "sync"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-type ResourceType struct {
-	state         protoimpl.MessageState
-	sizeCache     protoimpl.SizeCache
-	unknownFields protoimpl.UnknownFields
-
-	Namespace string `protobuf:"bytes,1,opt,name=namespace,proto3" json:"namespace,omitempty"`
-	Name      string `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
-}
-
-func (x *ResourceType) Reset() {
-	*x = ResourceType{}
-	if protoimpl.UnsafeEnabled {
-		mi := &file_kessel_inventory_v1beta2_resource_type_proto_msgTypes[0]
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		ms.StoreMessageInfo(mi)
-	}
-}
-
-func (x *ResourceType) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*ResourceType) ProtoMessage() {}
-
-func (x *ResourceType) ProtoReflect() protoreflect.Message {
-	mi := &file_kessel_inventory_v1beta2_resource_type_proto_msgTypes[0]
-	if protoimpl.UnsafeEnabled && x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use ResourceType.ProtoReflect.Descriptor instead.
-func (*ResourceType) Descriptor() ([]byte, []int) {
-	return file_kessel_inventory_v1beta2_resource_type_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *ResourceType) GetNamespace() string {
-	if x != nil {
-		return x.Namespace
-	}
-	return ""
-}
-
-func (x *ResourceType) GetName() string {
-	if x != nil {
-		return x.Name
-	}
-	return ""
-}
-
-var File_kessel_inventory_v1beta2_resource_type_proto protoreflect.FileDescriptor
-
-var file_kessel_inventory_v1beta2_resource_type_proto_rawDesc = []byte{
-	0x0a, 0x2c, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f,
-	0x72, 0x79, 0x2f, 0x76, 0x31, 0x62, 0x65, 0x74, 0x61, 0x32, 0x2f, 0x72, 0x65, 0x73, 0x6f, 0x75,
-	0x72, 0x63, 0x65, 0x5f, 0x74, 0x79, 0x70, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x18,
-	0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2e, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f, 0x72, 0x79,
-	0x2e, 0x76, 0x31, 0x62, 0x65, 0x74, 0x61, 0x32, 0x1a, 0x1b, 0x62, 0x75, 0x66, 0x2f, 0x76, 0x61,
-	0x6c, 0x69, 0x64, 0x61, 0x74, 0x65, 0x2f, 0x76, 0x61, 0x6c, 0x69, 0x64, 0x61, 0x74, 0x65, 0x2e,
-	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x52, 0x0a, 0x0c, 0x52, 0x65, 0x73, 0x6f, 0x75, 0x72, 0x63,
-	0x65, 0x54, 0x79, 0x70, 0x65, 0x12, 0x25, 0x0a, 0x09, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61,
-	0x63, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x42, 0x07, 0xba, 0x48, 0x04, 0x72, 0x02, 0x10,
-	0x01, 0x52, 0x09, 0x6e, 0x61, 0x6d, 0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x12, 0x1b, 0x0a, 0x04,
-	0x6e, 0x61, 0x6d, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x42, 0x07, 0xba, 0x48, 0x04, 0x72,
-	0x02, 0x10, 0x01, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x42, 0x72, 0x0a, 0x28, 0x6f, 0x72, 0x67,
-	0x2e, 0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x5f, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2e,
-	0x61, 0x70, 0x69, 0x2e, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f, 0x72, 0x79, 0x2e, 0x76, 0x31,
-	0x62, 0x65, 0x74, 0x61, 0x32, 0x50, 0x01, 0x5a, 0x44, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e,
-	0x63, 0x6f, 0x6d, 0x2f, 0x70, 0x72, 0x6f, 0x6a, 0x65, 0x63, 0x74, 0x2d, 0x6b, 0x65, 0x73, 0x73,
-	0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65, 0x6e, 0x74, 0x6f, 0x72, 0x79, 0x2d, 0x61, 0x70, 0x69,
-	0x2f, 0x61, 0x70, 0x69, 0x2f, 0x6b, 0x65, 0x73, 0x73, 0x65, 0x6c, 0x2f, 0x69, 0x6e, 0x76, 0x65,
-	0x6e, 0x74, 0x6f, 0x72, 0x79, 0x2f, 0x76, 0x31, 0x62, 0x65, 0x74, 0x61, 0x32, 0x62, 0x06, 0x70,
-	0x72, 0x6f, 0x74, 0x6f, 0x33,
-}
-
-var (
-	file_kessel_inventory_v1beta2_resource_type_proto_rawDescOnce sync.Once
-	file_kessel_inventory_v1beta2_resource_type_proto_rawDescData = file_kessel_inventory_v1beta2_resource_type_proto_rawDesc
-)
-
-func file_kessel_inventory_v1beta2_resource_type_proto_rawDescGZIP() []byte {
-	file_kessel_inventory_v1beta2_resource_type_proto_rawDescOnce.Do(func() {
-		file_kessel_inventory_v1beta2_resource_type_proto_rawDescData = protoimpl.X.CompressGZIP(file_kessel_inventory_v1beta2_resource_type_proto_rawDescData)
-	})
-	return file_kessel_inventory_v1beta2_resource_type_proto_rawDescData
-}
-
-var file_kessel_inventory_v1beta2_resource_type_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
-var file_kessel_inventory_v1beta2_resource_type_proto_goTypes = []any{
-	(*ResourceType)(nil), // 0: kessel.inventory.v1beta2.ResourceType
-}
-var file_kessel_inventory_v1beta2_resource_type_proto_depIdxs = []int32{
-	0, // [0:0] is the sub-list for method output_type
-	0, // [0:0] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
-}
-
-func init() { file_kessel_inventory_v1beta2_resource_type_proto_init() }
-func file_kessel_inventory_v1beta2_resource_type_proto_init() {
-	if File_kessel_inventory_v1beta2_resource_type_proto != nil {
-		return
-	}
-	if !protoimpl.UnsafeEnabled {
-		file_kessel_inventory_v1beta2_resource_type_proto_msgTypes[0].Exporter = func(v any, i int) any {
-			switch v := v.(*ResourceType); i {
-			case 0:
-				return &v.state
-			case 1:
-				return &v.sizeCache
-			case 2:
-				return &v.unknownFields
-			default:
-				return nil
-			}
-		}
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: file_kessel_inventory_v1beta2_resource_type_proto_rawDesc,
-			NumEnums:      0,
-			NumMessages:   1,
-			NumExtensions: 0,
-			NumServices:   0,
-		},
-		GoTypes:           file_kessel_inventory_v1beta2_resource_type_proto_goTypes,
-		DependencyIndexes: file_kessel_inventory_v1beta2_resource_type_proto_depIdxs,
-		MessageInfos:      file_kessel_inventory_v1beta2_resource_type_proto_msgTypes,
-	}.Build()
-	File_kessel_inventory_v1beta2_resource_type_proto = out.File
-	file_kessel_inventory_v1beta2_resource_type_proto_rawDesc = nil
-	file_kessel_inventory_v1beta2_resource_type_proto_goTypes = nil
-	file_kessel_inventory_v1beta2_resource_type_proto_depIdxs = nil
-}
