# openapi.yaml
@@ -559,11 +559,19 @@ paths:
                 - KesselLookupService
             operationId: KesselLookupService_LookupResources
             parameters:
-                - name: resourceType.namespace
+                - name: resource.resourceType
                   in: query
                   schema:
                     type: string
-                - name: resourceType.name
+                - name: resource.resourceId
+                  in: query
+                  schema:
+                    type: string
+                - name: resource.reporter.type
+                  in: query
+                  schema:
+                    type: string
+                - name: resource.reporter.instanceId
                   in: query
                   schema:
                     type: string
@@ -578,15 +586,19 @@ paths:
                      e.g. "members" or "owners" of a group identified in `subject`.
                   schema:
                     type: string
-                - name: subject.subject.type.namespace
+                - name: subject.subject.resourceType
                   in: query
                   schema:
                     type: string
-                - name: subject.subject.type.name
+                - name: subject.subject.resourceId
                   in: query
                   schema:
                     type: string
-                - name: subject.subject.id
+                - name: subject.subject.reporter.type
+                  in: query
+                  schema:
+                    type: string
+                - name: subject.subject.reporter.instanceId
                   in: query
                   schema:
                     type: string
@@ -1367,6 +1379,13 @@ components:
                     type: string
                 resourceData:
                     type: object
+        kessel.inventory.v1beta2.ReporterReference:
+            type: object
+            properties:
+                type:
+                    type: string
+                instanceId:
+                    type: string
         kessel.inventory.v1beta2.Resource:
             type: object
             properties:
@@ -1381,17 +1400,12 @@ components:
         kessel.inventory.v1beta2.ResourceReference:
             type: object
             properties:
-                type:
-                    $ref: '#/components/schemas/kessel.inventory.v1beta2.ResourceType'
-                id:
+                resourceType:
                     type: string
-        kessel.inventory.v1beta2.ResourceType:
-            type: object
-            properties:
-                namespace:
+                resourceId:
                     type: string
-                name:
-                    type: string
+                reporter:
+                    $ref: '#/components/schemas/kessel.inventory.v1beta2.ReporterReference'
         kessel.inventory.v1beta2.ResponsePagination:
             type: object
             properties:
